<resources>
    <string name="app_name">CinemaBase</string>
    <string name="action_settings">Settings</string>
    <string name="requested_movie">Movie</string>

    <string name="facebook_app_id">813065802080348</string>

    <!-- Strings for searched movie fragment -->
    <string name="titleLabel">Title: </string>
    <string name="yearLabel">Year: </string>
    <string name="ratingLabel">Rating: </string>
    <string name="timeLabel">Time: </string>
    <string name="genreLabel">Genre: </string>
    <string name="plotLabel">Plot: </string>

    <string-array name="drawerTitles">
        <item>Facebook connection</item>
        <item>Support</item>
        <item>Logout</item>
    </string-array>

    <!--Strings for drawer items-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_help_page">Support &amp; Developer Information</string>
    <string name="iconDrawer">Open Side Drawer</string>
    <string name="search_hint">Movie Search</string>
    <string name="title_activity_requested_movie">RequestedMovie</string>

    <string-array name="spinnerMovieDatabase">
        <item>In Theaters</item>
        <item>Top Rentals</item>
        <item>New Releases</item>
    </string-array>

    <!--spinner urls-->
    <string-array name="spinnerDatabaseUrls">
        <item>
            http://api.rottentomatoes.com/api/public/v1.0/lists/movies/in_theaters.json?page_limit=7&amp;page=1&amp;country=us&amp;apikey=p2f8x49q6kbdznmudd7vmp78
        </item>
        <item>
            http://api.rottentomatoes.com/api/public/v1.0/lists/dvds/top_rentals.json?limit=7&amp;country=us&amp;apikey=p2f8x49q6kbdznmudd7vmp78
        </item>
        <item>
            http://api.rottentomatoes.com/api/public/v1.0/lists/dvds/new_releases.json?page_limit=7&amp;page=1&amp;country=us&amp;apikey=p2f8x49q6kbdznmudd7vmp78
        </item>
    </string-array>


    <string-array name="topMovies">
        <item>Avengers: Age of Ultron</item>
        <item>Hot Pursuit</item>
        <item>The Age of Adaline</item>
        <item>Furious Seven</item>
        <item>Paul Blart: Mall Cop 2</item>
        <item>Ex Machina</item>
        <item>Home</item>
    </string-array>

</resources>
